# AiVideoMonitoring

./: App.css  App.tsx  README.md  analyzer.py  background_worker.py  index-Cz_Tg86B.css  index-K1RCjs0n.js  main.py  monitoring.db  pyproject.toml  stream_capture.py  tsconfig.json
