[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.136.1"}
psycopg = {extras = ["binary"], version = "^3.3.4"}
reportlab = "^4.5.1"
opencv-python-headless = "^4.10"
ultralytics = "^8.4"
Pillow = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
